--- a/src/css/sobre.css
+++ b/src/css/sobre.css
@@ -8,7 +8,21 @@ padding: 20px;
 
 h1 {
     font-family: 'Dancing Script', cursive;
+    font-size: 2.8rem;
+    padding-left: 25%;
+    padding-right: 10%;
+
 }
 p{
     font-family: cursive;
+    font-size: 1.2rem;
+}
+
+p.nossaHistoria {
+    padding: 10%;
+}
+
+.video.col-12 {
+    padding-bottom: 20%;
+    padding-top: 1%;
 }
