--- a/src/css/efeitos.css
+++ b/src/css/efeitos.css
@@ -1,8 +1,8 @@
 /**  **/
 
 audio#audio-player {
-    height: 1%;
-    width: 100px;
+    height: 2rem;
+    width: 40%;
 }
 
 
@@ -10,7 +10,7 @@ audio#audio-player {
 #animated_div {
     float: left;
     display: block;
-    padding-left: 20%;
+    padding-left: 15%;
     width: 100%;
     height: 1%;
     background: linear-gradient(to right, rgba(207, 199, 248, 0.742), rgba(235, 188, 167, 0.624));
