--- a/src/css/form.css
+++ b/src/css/form.css
@@ -132,6 +132,8 @@
 
         .col-12 {
             width: 100%;
+            padding-left: 5%;
+            padding-right: 5%;
         }
 
         /*
