--- a/src/css/efeitos.css
+++ b/src/css/efeitos.css
@@ -30,7 +30,7 @@ audio#audio-player {
 }
 
 @keyframes animated_div {
-    0% {
+   /* 0% {
         transform: rotate(0deg);
         left: 0px;
     }
@@ -56,7 +56,7 @@ audio#audio-player {
         background: #bed8dc;
     }
 
-    100% {
+    50% {
         transform: rotate(-360deg);
         left: 0px;
     }
@@ -160,6 +160,7 @@ audio#audio-player {
         left: 0px;
     }
 }
+    */
 
 
 /*animação flor*/
