--- a/src/css/style.css
+++ b/src/css/style.css
@@ -401,6 +401,9 @@ h3 {
   background-repeat: no-repeat;
 }
 
+div#ListaPresente {
+  padding: 0;
+}
 .frasePresentes {
   width: 100%;
   padding-top: 0.5rem;
